--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -23,6 +23,7 @@
 }
 
 .about__button {
+  font-family: inherit;
   font-size: 2rem;
   padding: 1rem;
   border-radius: 20px;
@@ -39,4 +40,25 @@
 
 .about__button:active {
   transform: scale(0.98);
+}
+
+@media only screen and (max-width: 600px) {
+  .about {
+    height: fit-content;
+  }
+  .about__container {
+    width: 90%;
+    height: fit-content;
+    text-align: center;
+    font-size: 1rem;
+    margin: 10px 0;
+  }
+
+  .about__button {
+    margin-top: 10px;
+    font-size: 1rem;
+    padding: 1rem;
+    width: 175px;
+    color: black;
+  }
 }
