--- a/src/components/Book/Book.css
+++ b/src/components/Book/Book.css
@@ -70,13 +70,28 @@
 
   .book__text,
   .book__form {
-    width: 250px;
-    height: 275px;
+    width: 90vw;
+    min-height: 275px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.9);
     border: 5px solid white;
+    margin: 50px 0;
+  }
+
+  .book__text {
+    text-align: center;
+  }
+
+  .book__textinput,
+  .book__textarea,
+  .book__button {
+    width: 80%;
+    padding: 0.5rem;
+    margin: 10px 0;
+    border-radius: 20px;
+    border: none;
   }
 }
