--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -24,3 +24,21 @@ h2 {
   text-decoration: none;
   color: #d3bc86;
 }
+
+@media only screen and (max-width: 600px) {
+  nav {
+    display: flex;
+    flex-direction: column;
+    font-size: 2rem;
+    flex-wrap: wrap;
+    height: 250px;
+  }
+
+  h1 {
+    font-size: 1rem;
+  }
+
+  h2 {
+    font-size: 1rem;
+  }
+}
