--- a/src/components/Restaurant/RestaurantSite/RestaurantSite.css
+++ b/src/components/Restaurant/RestaurantSite/RestaurantSite.css
@@ -27,3 +27,26 @@
   justify-content: center;
   align-items: center;
 }
+
+@media only screen and (max-width: 600px) {
+  .hero {
+    padding: 2rem;
+  }
+
+  .hero h1 {
+    width: 250px;
+    text-align: center;
+    height: 125px;
+    border: 5px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5rem;
+  }
+
+  .restaurant__about {
+    padding: 2rem;
+    line-height: 3;
+    text-align: center;
+  }
+}
