more mobile responsive/GB

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -42,6 +42,10 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .home {
+    height: 90vh;
+  }
+
   .home__container {
     width: 90%;
   }
